# agaric

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .mcp.json  .npmrc  .nsprc  .oxfmtrc.json  .oxlintrc.json  .sqruff  .taplo.toml  ADR-REVIEW.md  ADR.md  AGENTS.md  ARCHITECTURE.md  BUILD.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  FEATURE-MAP.md  FEATURES.md  GOVERNANCE.md  MILESTONES.md  PROMPT.md  README.md  REVIEW-LATER.md  SECURITY.md  SESSION-LOG.md  SYNC-BLOCKERS-PLAN.md  SYNC-REVIEW.md  UNDO-REDO-PLAN.md  UX-COMPONENT-REVIEW.md  UX-TODOS.md  UX.md  _tmp_pcbt_part1.rs  _tmp_pcbt_part2.rs  _typos.toml  app-icon.json  backlinks-filter-plan.md  (+22 more)
src-tauri/: .env.example  Cargo.toml  deny.toml  dynamic-sql-baseline.txt  migrations-mock-ack-baseline.txt  mutants.toml  space-filter-baseline.txt  table-ownership-baseline.txt  tauri.android.conf.json  tauri.conf.json  unsafe-allowlist.txt
src-tauri/.cargo/: audit.toml
src-tauri/.config/: nextest.toml
src-tauri/.sqlx/: query-001490f6e940ce963989f02669fe78131f426c5fefc061bc533812ec6a5b19c9.json  query-0019beeddc13fc35f6144a949e7d139d8df6dbf792e1cd843bf8e3526610108d.json  query-0073b85d981133a2b170316e9bd953e152e86c910a8e8974bd6443ec1d35f3aa.json  query-007ca65db69e0835f39f0cb5d3d46cd591b3532a7c5ecba54fd764178c36a2b5.json  query-008c35710e7ee1bed684fa662db748ed759bc8158c59f458f30f4ecb48409f8e.json  query-00c3d1aa123cee43f2b29249f7510296ec7bd5c168536088d39a1f3e06252f35.json  query-00cfe84011b8475063c58ffe0ef37810cec8efefa89147a1c3ac5d7efdd53a71.json  query-01202f0b964ccf2fbdfd4fb637684ddc419207376d444704237cd7d1f0bcad79.json  query-0121b9cb1d04ee0ea8c8db770ba2f33ac76928ff435cb011319df425be8a8dab.json  query-014ea34ed7c16a8cf09c387305facee9463a37a48dcac3c46fbb6b20dfe96ec5.json  query-0168e918ee4b9cfc1ccaa42898ebb23a5519b8137af1991f3c38d02d01d3fc83.json  query-01732387619ffa19bc93c7a81a94119d2a51d05aa1cc218ea6314178f4467def.json  query-01bfcb8aa8105482a7a98f39feeab71c423b96927524c5fd8d10adb6a80efba1.json  query-01d129bae2bdd9cdc295d07ec33fe35f88dde99bbf3c10192e8d876193a62e1e.json  query-01fafd8454dbe629b51d61707ae4af007c2f99f6b08eb41b27e6d40d87b255f5.json  query-01fb04df02ed3b52daec449fa1aa02a5129be62209ade9663c15cfc1f5dc20ed.json  query-020cbf1efeeabf80ff1e037108ff5a54660ac34a3373616cb35bfc3caa9b962a.json  query-022e7ddb4bb2e9b15dc837e22cfa5056769cfe02cc2a11a296d483595cb858e9.json  query-02838d0ef9c21e32f80b5455ae408f9adbaac4310dcc00bd99b90e572367e228.json  query-02cf54260a205ff276a19224cfaeaaf4e5dfc05fc03d696a9e7008e2544b9386.json  query-031ac6108b8993a69225289b2fe4b299694b5dcfef17fdde60f711bf22e877d3.json  query-0327a88689d421eb4ce57332491cf9bd62f25ed0c56a37e336a86c34f624ad46.json  query-035129bf69cce54494c2a92f44dc5243bb0958ea35fd823e3c6d948e8228b22d.json  query-037aa8b314042ee035ac7034760644dd4f66f33fc26d151146c3c8cf672fb880.json  query-03805400388f5322e95774c300bc7a265af206bf922591193cc5972074e27c61.json  query-03933b1373dda4562659c7d3b850974e6af66d5d0b628c1811a877199a73226a.json  query-03fd94b1e956792cb76273989d61eb65d62b71a99d8cd902c0a0bc0ada0a6151.json  query-04037384dc3d464c35a3b662fc2f3315908da60e881a2c3158d859f161224c88.json  query-05035a1210a3dd0137083fce7624b44cef01efabd1180ca0d66dc0049eac6a01.json  query-0537a5cc57b52cfeb6b4ea82c9b84c88003c32c9b4e101cd6bf6fd3db3ff7f69.json  query-055577914c4df1718f27195c9921b8d3b72489a4ffb84b8e8f5a6ab7b6b257b0.json  query-05ac05e12fbca6888f6026bfa395dd24d35873f6ac4281d527edc34c522e42ab.json  query-063e6067116231b9a40c6a918b8274331954691a7f5c1270b5b04597b499e21d.json  query-068f68381794ac83db9ea148103830cfccc567fdd6d607fd12646b1d6d378b3c.json  query-06966bd089556867682ed867a4c60e30cdadff93c5f68bfdb39e8534a06180d1.json  query-0722b470fef7fef70bef12391a14f5afd06e103036de132d51171b9aeddcee80.json  query-07470e4207335ee47eda05bb611fbe3f77ac13bec7c79267d735bb1ab37a13db.json  query-074bb9370670e290121cbd9aaff8cdc1b7fb2026bd072543bbc84314e8c42806.json  query-0769e2e9d3366ebd2657b5e03d3308695f02f91bba0f65fc6e32f7991fddd6cd.json  query-07b12cb3feaf987e5d49b63ab7cb8325c9f8b2afe4c124d3add68d8b0ef6db2f.json  (+1121 more)
src-tauri/agaric-core/: Cargo.toml
src-tauri/agaric-engine/: Cargo.toml
src-tauri/agaric-observability/: Cargo.toml
src-tauri/agaric-store/: Cargo.toml
src-tauri/agaric-sync/: Cargo.toml
src-tauri/benches/: AGENTS.md  agenda_bench.rs  agenda_expansion_bench.rs  alias_bench.rs  attachment_bench.rs  backlink_query_bench.rs  cache_bench.rs  cold_start_bench.rs  commands_bench.rs  compaction_bench.rs  core_bench.rs  draft_bench.rs  engine_bench.rs  engine_checkpoint_bench.rs  export_bench.rs  fts_bench.rs  graph_bench.rs  hash_bench.rs  history_bench.rs  import_bench.rs  interactive_slo.rs  io_bench.rs  loro_vs_sql_reads.rs  merge_bench.rs  move_reorder_bench.rs  op_log_bench.rs  page_load_bench.rs  pagination_bench.rs  property_bench.rs  property_def_bench.rs  query_bench.rs  resource_envelope_bench.rs  snapshot_bench.rs  soft_delete_bench.rs  sync_bench.rs  tag_query_bench.rs  undo_redo.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/diagnostics/: Cargo.toml
src-tauri/fuzz/: Cargo.toml  README.md
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_fts5.sql  0003_op_log_block_id_index.sql  0004_backlink_query_indexes.sql  0005_block_type_check.sql  0006_fts5_trigram.sql  0007_add_conflict_type.sql  0008_op_log_device_op_type_index.sql  0009_peer_refs_cert_hash.sql  0010_peer_refs_device_name.sql  0011_property_definitions.sql  0012_block_fixed_fields.sql  0013_block_scheduled_date.sql  0014_seed_builtin_properties.sql  0015_page_aliases.sql  0016_seed_repeat_properties.sql  0017_peer_refs_last_address.sql  0018_remove_archived_at.sql  0019_add_ref_value_type.sql  0020_block_links_source_index.sql  0021_block_tag_inherited.sql  0022_block_properties_key_value_num_index.sql  0023_page_links_indexes.sql  0024_normalize_position_covering_index.sql  0025_projected_agenda_cache.sql  0026_link_metadata.sql  0027_add_page_id.sql  0028_materializer_retry_queue.sql  0032_gcal_agenda.sql  (+74 more)
(+3872 files in other folders)
