# Cargo workspace root.  PEND-09 Phase 0 introduced the `loro-spike` crate
# under `crates/loro-spike` as an isolated, throwaway evaluation of the Loro
# CRDT library (see `SESSION-LOG.md` Session 698); Phase 1 ported the
# necessary engine code into `src-tauri/src/loro/`.  The spike was archived
# in Phase 2 day-8 (see `SESSION-LOG.md` Session 698): the directory is
# gone, the spike's notes + final report + source are preserved at the
# annotated git tag `pend-09/spike-archive` (commit `3e8a1267`).
[workspace]
members = ["."]

[package]
name = "agaric"
version = "0.1.30"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
# Two binaries in this crate — `agaric` (the Tauri app, implicit via
# src/main.rs) and `agaric-mcp` (the MCP stub, explicit [[bin]] entry
# further down). `cargo tauri build` needs an unambiguous main-binary
# pointer when multiple targets exist.
default-run = "agaric"

# cargo-machete allowlist — PEND-41 R20.
#
# Each entry must carry a reachability rationale so a future audit can decide
# whether to keep, remove, or replace. cargo-machete flags these because their
# `use` statements live inside feature-gated modules or behind conditional
# compilation, so the static analyzer can't see the call site under the
# default feature set — but the runtime path is active and the crate ships
# in the final binary.
[package.metadata.cargo-machete]
ignored = [
    "mdns-sd",           # LAN sync discovery; called directly from sync_daemon.
    "qrcode",            # device-pairing QR code rendering; used in pairing.rs.
    "rand",              # crypto-quality random for pairing tokens + sync_net key material; used in sync_net / pairing / sync_scheduler.
    "rcgen",             # self-signed TLS certificate generation for mTLS sync handshake; used in sync_net/tls.rs.
    "rustls",            # pure-Rust TLS stack. Direct dep + transitive via reqwest 0.12/0.13, hyper-rustls, tauri-plugin-updater, tokio-rustls.
    "sha2",              # SHA-256 hashing for sync_scheduler digest paths + pairing token derivation.
    "tokio-tungstenite", # WebSocket transport for the sync protocol (sync_net/websocket.rs).
    "tokio-rustls",      # async TLS adapter for tokio. Direct dep + transitive via reqwest, tokio-tungstenite.
    "futures-util",      # Stream / Sink combinators used by sync_net + sqlx_core paths. Direct dep + transitive via futures, sqlx-core, reqwest, hyper-util, gio, glib.
    "x509-parser",       # peer-certificate parsing during the TLS mTLS handshake validation.
    # Android-only, unused on desktop targets (BUG-39)
    "jni",         # Java <-> Rust FFI for the multicast lock + Android lifecycle bridge.
    "ndk-context", # Android NDK runtime context handle for JNI calls.
]

[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"

[features]
# Opt-in feature for end-to-end smoke tests that require the
# `agaric-mcp` binary to be built first. CI enables this; local
# `cargo nextest run` does not. Local devs can still run the test
# manually: `cargo build --bin agaric-mcp && cargo nextest run --features ci-smoke -E 'test(stub_binary)'`.
ci-smoke = []
# Opt-in feature that builds the `audit_cross_space_refs` and `op_log_histogram`
# diagnostic bins. Off by default so `cargo tauri build` does not ship them in
# the .deb/.rpm/AppImage — they are read-only DB inspection tools for
# developers, not user-facing. Build locally with
# `cargo build --release --features diagnostics --bin <name>` when needed.
diagnostics = []
# MAINT-111 spike: opt-in evaluation of the official Rust MCP SDK
# (`rmcp`) as a possible replacement for the hand-rolled JSON-RPC 2.0
# framing in `mcp/server.rs`. **Off by default** — the production build
# still uses `mcp/server.rs`. The spike module exposes ONE read-only
# tool (`search`) through `rmcp`'s `ServerHandler` trait, alongside a
# self-contained test that asserts the activity-feed + ActorContext
# integration points still work through `rmcp`'s framing. See
# `src/mcp/rmcp_spike.md` for the verdict.
mcp_rmcp_spike = ["dep:rmcp"]
# PEND-09 Phase 3 day-9 — `loro-shadow` feature flag retired.  The
# Loro CRDT engine is now the only path: `loro` and `xxhash-rust` are
# hard deps below (no `optional = true`), and `src/loro/` compiles
# unconditionally.  Removing the gate landed in commit `f7c21782`; see
# `SESSION-LOG.md` Session 699 Phase 3 day 9.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
# MAINT-106: prevent two SQLite pools racing on the same DB if the user
# double-launches.  Desktop-only (Android/iOS enforce single-instance via
# the OS task model) — registration is gated `#[cfg(desktop)]` in lib.rs.
# Part of the Tauri plugin coupled stack per AGENTS.md §"Coupled
# Dependency Updates" — move in lockstep with the rest of the
# tauri-plugin-* crates.
tauri-plugin-single-instance = "2"
# MAINT-108: remember window size / position / monitor / maximized state
# across launches.  Desktop-only — registration is gated `#[cfg(desktop)]`
# in lib.rs.  Part of the Tauri plugin coupled stack.
tauri-plugin-window-state = "2"
# MAINT-109: cross-platform platform/version/arch/locale/hostname API.
# Used by the bug-report metadata collector (see commands/bug_report.rs).
# Works on desktop and mobile.  Part of the Tauri plugin coupled stack.
tauri-plugin-os = "2"
# FEAT-13: launch-on-login support.  Settings → General → "Launch on
# login" toggle drives the plugin's `enable()` / `disable()` /
# `isEnabled()` IPC.  Plumbing per OS lives upstream (XDG autostart
# `.desktop` files on Linux, macOS `LaunchAgents`, Windows registry).
# Desktop-only — Android/iOS handle "start at boot" via the OS task
# model (foreground service / background fetch entitlements), so the
# plugin is gated behind `#[cfg(desktop)]` in lib.rs.  Part of the
# Tauri plugin coupled stack per AGENTS.md §"Coupled Dependency
# Updates" — move in lockstep with the rest of the tauri-plugin-*
# crates.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
ulid = "1.2.1"
uuid = { version = "1.23.0", features = ["v4"] }
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "net", "io-util", "io-std"] }
regex = "1"
aho-corasick = "1"
base64 = "0.22.1"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
rustc-hash = "2.1.2"
similar = "3"
zstd = "0.13"
ciborium = "0.2"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Sync
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rcgen = "0.14"
mdns-sd = "0.19"
# L-65: enumerate local interfaces so mDNS announces only on RFC 1918
# private IPv4 LAN interfaces (not on every routable interface, which
# leaks the device IP onto guest WiFi / VPN / cellular). Already in the
# build graph transitively via `mdns-sd`; promoted to a direct dep so
# `MdnsService::announce` can use it explicitly.
if-addrs = "0.15"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
sha2 = "0.11"
rand = "0.10"
x509-parser = "0.18.1"
tauri-plugin-updater = "2.10.0"
tracing-appender = "0.2.4"
# FEAT-5c / MAINT-91 — align `reqwest 0.13` to the repo's rustls-everywhere
# posture (same TLS stack as `tokio-tungstenite` / `tokio-rustls` / sqlx on
# rustls).  `rustls` in reqwest 0.13 pulls `rustls-platform-verifier` which
# uses the OS's native trust roots (matches the `rustls-tls-native-roots`
# feature in `tokio-tungstenite`).  `json` is used by `gcal_push::api`;
# `http2` keeps parity with reqwest's default bundle minus native-tls.
# `default-features = false` prevents the `native-tls` transitive crate
# from being pulled via `system-proxy` / `charset` at link time.
# Note: reqwest 0.13's `default-tls = ["rustls"]` (it changed from 0.12
# which defaulted to native-tls), so disabling defaults and re-selecting
# `rustls` yields a single rustls stack — binary size drops by the
# `native-tls-crate` slice.
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "http2", "charset"] }
tauri-plugin-process = "2.3.1"

# FEAT-5b — Google Calendar OAuth 2.0 PKCE flow + keychain token storage.
# Coupled stack (see AGENTS.md §"Coupled Dependency Updates"): `oauth2`,
# `keyring`, `secrecy`, `tauri-plugin-oauth`, and `async-trait` all enter
# together.  `tauri-plugin-oauth` follows the same major as every other
# `tauri-plugin-*` crate — bump in lockstep with the Tauri stack.
#
# MAINT-91 status: oauth2 v5.0 pins `reqwest ^0.12` (via its built-in
# `reqwest` feature) while the repo pins `reqwest 0.13.2` (rustls above).
# Dropping the `reqwest` feature here and writing a custom `AsyncHttpClient`
# adapter over reqwest 0.13 is tracked in REVIEW-LATER.md as MAINT-91.
# FEAT-5c considered tackling it opportunistically and deferred: the
# adapter requires re-typing `OAuthClient::http_client` and
# `classify_refresh_error`'s generic error parameter, which expands FEAT-5c's
# surface beyond its stated scope.  MAINT-91 stays open — to be revisited
# when oauth2 tracks `reqwest 0.13`, or as a standalone refactor.
# We still select `rustls-tls` so the *oauth2 crate's* reqwest 0.12 slice
# uses rustls (not native-tls), keeping a single TLS stack at link time.
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
# keyring v3: enable every platform's native backend in one feature list.
# The per-platform deps (`security-framework`, `windows-sys`, `dbus-secret-service`)
# are gated on `cfg(target_os = "...")` inside keyring's own Cargo.toml, so a
# Linux build does not try to compile `security-framework`, and so on.
# `crypto-rust` selects pure-Rust crypto for the Secret Service backend —
# avoids pulling OpenSSL in the Linux build.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
secrecy = "0.10"
tauri-plugin-oauth = "2"
async-trait = "0.1"

# FEAT-10 — `tauri-plugin-deep-link` enables OS-level URL routing for the
# `agaric://` scheme: `agaric://block/<ULID>` / `agaric://page/<ULID>` for
# external automation (terminal scripts, OS notifications, Spotlight),
# `agaric://settings/<tab>` for OS-level deep links into the Settings
# panel (composes with UX-276's `?settings=…` query param), and
# `agaric://oauth/callback` for the Custom-Tabs + PKCE + App-Link flow on
# Android (FEAT-5g unblocker — Android sandboxes the loopback HTTP
# listener that desktop OAuth uses).  Cross-platform — required on
# desktop AND Android, so registration is NOT gated behind
# `#[cfg(desktop)]`.  Part of the Tauri plugin coupled stack per
# AGENTS.md §"Coupled Dependency Updates" — move in lockstep with the
# rest of the tauri-plugin-* crates.
tauri-plugin-deep-link = "2"
# FEAT-10 — `url` 2.x is already a transitive dep of every `tauri-plugin-*`
# crate that handles URLs (notably `tauri-plugin-deep-link`); declare it
# explicitly so `src-tauri/src/deeplink/mod.rs` can `use url::Url` to
# parse inbound `agaric://…` strings without depending on transitive
# resolution of an indirect dependency.
url = "2"
# FEAT-12 — global hotkey for "quick capture" (drop a line into today's
# journal from anywhere). Desktop-only — Android / iOS have no
# global-shortcut concept, so registration is gated `#[cfg(desktop)]` in
# lib.rs.  Part of the Tauri plugin coupled stack per AGENTS.md §"Coupled
# Dependency Updates" — move in lockstep with the rest of the
# tauri-plugin-* crates.
tauri-plugin-global-shortcut = "2"
dirs = { version = "6.0.0", default-features = false }

# MAINT-111 spike: official Rust MCP SDK. Optional + feature-gated so
# the default build does not link `rmcp`. Pinned to v1.6 (post-1.0,
# Apache-2.0). Defaults (`base64`, `macros`, `server`) include the
# `transport-async-rw` server transport via the `server` feature; the
# `client` feature is added so the spike's end-to-end test can drive a
# real rmcp client over an in-memory `tokio::io::duplex` pair. See
# `src/mcp/rmcp_spike.md` for the spike verdict.
rmcp = { version = "1.7", optional = true, features = ["client"] }

# PEND-09 Phase 1 — Loro CRDT runtime.  Hard dep as of Phase 3 day-9
# (the `loro-shadow` feature gate retired); the engine is the only
# materializer path.  Caret-1 mirrors what the (now-archived) spike
# crate pinned (see git tag `pend-09/spike-archive` for
# `crates/loro-spike/Cargo.toml`); the spike's format-stability finding
# (kill criterion #4) is the basis for the 1.x pin.  Not part of any
# coupled dep stack per AGENTS.md §"Coupled Dependency Updates".
loro = "1.12"

# PEND-09 Phase 1 day-7 — deterministic, cross-Rust-version-stable u64
# hash for `peer_id_from_device_id`.  `std::hash::DefaultHasher`
# (SipHash-1-3) is documented as not stable across stdlib versions, and
# Loro's PeerID is load-bearing once peer ids start persisting across
# process lifetimes (Phase 2 `loro_doc_state` snapshots) and across
# devices that sync the same doc.  `xxh3_64` is deterministic
# (seed defaults to 0), versioned, and follows the official xxHash
# specification — pinning the algorithm here means a future Rustc
# upgrade will not silently re-credit op history to a different peer.
# Hard dep as of Phase 3 day-9 (no longer optional/feature-gated).
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
insta = { version = "1.47.0", features = ["yaml", "redactions"] }
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
# FEAT-5b — HTTP mocking for OAuth token endpoint tests.
wiremock = "0.6"

# Android-only dependencies (BUG-39: WiFi multicast lock via JNI).
# Gated on target_os = "android" so desktop builds do not pull in
# these transitive dependencies.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk-context = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
# PEND-41 R24 — `panic = "abort"` shrinks the binary 5-10% (drops the
# unwind tables) and shaves a small amount of cold-start cost. Safe
# because Agaric does not rely on stack unwinding to recover from
# panics: Tauri IPC commands return `Result`, the daemon panic hook
# at lib.rs:447 just logs + lets the process terminate, and there
# are zero `std::panic::catch_unwind` call-sites in `src-tauri/src/`
# (verified during R24 landing — re-run `grep -r catch_unwind
# src-tauri/src/` before tightening this further). `lto = "fat"`
# was considered and rejected (2-5 min added to every release build
# per platform; not worth it on a 5-10% binary-size delta).
panic = "abort"

[lib]
name = "agaric_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "op_log_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "pagination_bench"
harness = false

[[bench]]
name = "soft_delete_bench"
harness = false

[[bench]]
name = "commands_bench"
harness = false

[[bench]]
name = "fts_bench"
harness = false

[[bench]]
name = "draft_bench"
harness = false

[[bench]]
name = "undo_redo"
harness = false

[[bench]]
name = "backlink_query_bench"
harness = false

[[bench]]
name = "move_reorder_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "import_bench"
harness = false

[[bench]]
name = "tag_query_bench"
harness = false

[[bench]]
name = "agenda_bench"
harness = false

[[bench]]
name = "agenda_expansion_bench"
harness = false

[[bench]]
name = "property_bench"
harness = false

[[bench]]
name = "compaction_bench"
harness = false

[[bench]]
name = "alias_bench"
harness = false

[[bench]]
name = "export_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "attachment_bench"
harness = false

[[bench]]
name = "property_def_bench"
harness = false

# Phase 2 §B.1 of `pending/scale-benchmarks-100k-2026-05-14.md` — history +
# undo/redo at scale ([1K, 10K, 100K] ops on a single page). The 50-op
# revert at 100K is the budget point that feeds the matching row in
# `interactive_slo.rs` (200 ms gate).
[[bench]]
name = "history_bench"
harness = false

# Phase 1 of `pending/scale-benchmarks-100k-2026-05-14.md` — latency-gate
# bench that re-runs every interactive Tauri command at the 100K-scale
# fixture and `panic!`s if any sample's mean elapsed exceeds the
# per-command budget (sourced from ARCHITECTURE.md §25). Intended to be
# run once in CI; the two §25 *Problem* commands (`list_page_links`,
# `list_projected_agenda`) are gated behind `SLO_INCLUDE_PROBLEM=1`
# until their fix plans land.
[[bench]]
name = "interactive_slo"
harness = false

# PEND-09 Phase 0 day-10 — paired SQL read benchmark mirroring the
# (now-archived) spike's `read_path_bench` (day-7); see git tag
# `pend-09/spike-archive` for the original source.  Throwaway in
# spirit; lives only until the spike's open question 8 is closed
# (see `SESSION-LOG.md` Session 698 + `git tag pend-09/spike-archive`).
[[bench]]
name = "loro_vs_sql_reads"
harness = false

# FEAT-4a — stdio ↔ MCP socket bridge binary shipped alongside the Tauri app.
# The main Tauri binary is `src/main.rs` (auto-detected); this extra bin is
# a small standalone forwarder that MCP clients spawn as a stdio subprocess.
[[bin]]
name = "agaric-mcp"
path = "src/bin/agaric-mcp.rs"

# PEND-15 Phase 0 — read-only audit binary that enumerates cross-space
# references in a local notes.db. Informs the user's Path A vs Path B
# gating decision before Phase 1 lands. Standalone (no Tauri app handle).
#
# NOTE (session 738): the `required-features = ["diagnostics"]` gate
# previously here broke the release matrix — `tauri-bundler` scans every
# `[[bin]]` entry and tries to copy each release binary into the
# .deb/.rpm bundle regardless of `required-features`, so a feature-gated
# bin that isn't built leaves a dangling `target/.../release/<name>`
# path the bundler can't satisfy. Restoring the unconditional build is
# the minimal fix. The original bundle-size concern (the bin adds
# ~8 MB to the .deb / AppImage) is real but separate; the proper
# resolution is to move the diagnostic bins into their own crate so
# they sit outside the main `[[bin]]` scan entirely.
[[bin]]
name = "audit_cross_space_refs"
path = "src/bin/audit_cross_space_refs.rs"

# PEND-09 Phase 2 day-4 — read-only diagnostic that prints a histogram of
# the user's `op_log` table (count + percentage per op_type) and compares
# the result against the spike's synthetic 30/50/10/5/5 op-mix proxy.
# Closes Phase-2 Gate 4 ("op-log volume sampling"); see `SESSION-LOG.md`
# Session 698 for the multi-day chain. The binary opens the DB with
# `SqliteConnectOptions::read_only(true)` so it can never accidentally
# write to the user's data — safe to run on a live DB.
#
# Bundle-size gating intentionally removed — see the note above on
# `audit_cross_space_refs`.
[[bin]]
name = "op_log_histogram"
path = "src/bin/op_log_histogram.rs"

# PEND-09 Phase 3 day-10 — `parity_report` bin deleted alongside the
# `merge_parity_log` table (migration `0057`).  The bin's reason for
# existing was the diffy-vs-Loro parity histogram during the Phase-2
# soak; with diffy gone the comparison surface no longer exists, the
# table got dropped, and the bin's queries would all be against a
# missing table.  Re-introduce from git history if a future sync
# audit ever needs an analogous tool.
