# Cargo workspace root. Phase 0 introduced the `loro-spike` crate
# under `crates/loro-spike` as an isolated, throwaway evaluation of the Loro
# CRDT library (see `docs/session-log/2026-sessions-401-800.md` Session 698); Phase 1 ported the
# necessary engine code into `src-tauri/src/loro/`.  The spike was archived
# in Phase 2 day-8 (see `docs/session-log/2026-sessions-401-800.md` Session 698): the directory is
# gone, the spike's notes + final report + source are preserved at the
# annotated git tag `pend-09/spike-archive` (commit `3e8a1267`).
[workspace]
# #645 — `diagnostics` holds the two read-only DB inspection bins
# (`op_log_histogram`, `audit_cross_space_refs`) carved out of this app
# crate so `tauri-bundler` no longer scans them as app `[[bin]]` targets.
members = [".", "diagnostics"]

[package]
name = "agaric"
version = "0.6.6"
edition = "2024"
# #640: MSRV documentation — keep in lockstep with rust-toolchain.toml and
# the `toolchain:` inputs in .github/workflows/{ci,release,_validate}.yml.
# cargo refuses (resolver) / warns (build) when a consumer's toolchain is
# older than this, instead of failing with inscrutable syntax errors.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false
# Two binaries in this crate — `agaric` (the Tauri app, implicit via
# src/main.rs) and `agaric-mcp` (the MCP stub, explicit [[bin]] entry
# further down). `cargo tauri build` needs an unambiguous main-binary
# pointer when multiple targets exist.
default-run = "agaric"

# Cargo-machete allowlist —.
#
# Each entry must carry a reachability rationale so a future audit can decide
# whether to keep, remove, or replace. cargo-machete flags these because their
# `use` statements live inside feature-gated modules or behind conditional
# compilation, so the static analyzer can't see the call site under the
# default feature set — but the runtime path is active and the crate ships
# in the final binary.
[package.metadata.cargo-machete]
ignored = [
    "mdns-sd",           # LAN sync discovery; called directly from sync_daemon.
    "qrcode",            # device-pairing QR code rendering; used in pairing.rs.
    "rand",              # crypto-quality random for pairing tokens + sync_net key material; used in sync_net / pairing / sync_scheduler.
    "rcgen",             # self-signed TLS certificate generation for mTLS sync handshake; used in sync_net/tls.rs.
    "rustls",            # pure-Rust TLS stack. Direct dep + transitive via reqwest 0.12/0.13, hyper-rustls, tauri-plugin-updater, tokio-rustls.
    "sha2",              # SHA-256 hashing for sync_scheduler digest paths + pairing token derivation.
    "tokio-tungstenite", # WebSocket transport for the sync protocol (sync_net/websocket.rs).
    "tokio-rustls",      # async TLS adapter for tokio. Direct dep + transitive via reqwest, tokio-tungstenite.
    "futures-util",      # Stream / Sink combinators used by sync_net + sqlx_core paths. Direct dep + transitive via futures, sqlx-core, reqwest, hyper-util, gio, glib.
    "x509-parser",       # peer-certificate parsing during the TLS mTLS handshake validation.
    # Android-only, unused on desktop targets
    "jni",         # Java <-> Rust FFI for the multicast lock + Android lifecycle bridge.
    "ndk-context", # Android NDK runtime context handle for JNI calls.
]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
# Leftover-debug / unfinished-code guards (zero current hits). The pre-push and
# CI clippy run with `-D warnings`, so these block at push. `print_stdout`/
# `print_stderr` are intentionally NOT enabled — the `agaric-mcp` bin speaks the
# MCP protocol over stdio and the CLI prints to the console.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Auto-fixable pedantic lints (every violation is machine-applicable via
# `cargo clippy --fix`). Enabled as warn; pre-push/CI run `-D warnings`.
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
cast_lossless = "warn"
manual_string_new = "warn"
single_match_else = "warn"
needless_raw_string_hashes = "warn"
range_plus_one = "warn"
manual_assert = "warn"
unnested_or_patterns = "warn"
stable_sort_primitive = "warn"
single_char_pattern = "warn"
implicit_clone = "warn"
bool_to_int_with_if = "warn"
ignored_unit_patterns = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"

[features]
# Opt-in feature for end-to-end smoke tests that require the
# `agaric-mcp` binary to be built first. CI enables this; local
# `cargo nextest run` does not. Local devs can still run the test
# manually: `cargo build --bin agaric-mcp && cargo nextest run --features ci-smoke -E 'test(stub_binary)'`.
ci-smoke = []
# #645 — the `diagnostics` feature (formerly built the
# `audit_cross_space_refs` / `op_log_histogram` bins) is retired: those
# bins moved to the `agaric-diagnostics` workspace member, so the feature
# gated nothing in this crate. Run the tools with
# `cargo run -p agaric-diagnostics --bin <name>`.
# `rmcp` is a hard dep (was previously gated behind the
# `mcp_rmcp_spike` feature during the M1/M2 spike). The adapter in
# `mcp/rmcp_spike.rs` is the production tools/call dispatcher.
# Phase 3 day-9 — `loro-shadow` feature flag retired. The
# Loro CRDT engine is now the only path: `loro` and `xxhash-rust` are
# hard deps below (no `optional = true`), and `src/loro/` compiles
# unconditionally.  Removing the gate landed in commit `f7c21782`; see
# `docs/session-log/2026-sessions-401-800.md` Session 699 Phase 3 day 9.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
# Cross-platform platform/version/arch/locale/hostname API.
# Used by the bug-report metadata collector (see commands/bug_report.rs).
# Works on desktop and mobile.  Part of the Tauri plugin coupled stack.
tauri-plugin-os = "2"
# Native OS notifications for due / scheduled tasks. The
# `notify_task` command (see commands/notifier.rs) fires a desktop /
# mobile notification through the plugin's builder.  Works on desktop
# and mobile (Android 13+ needs the `POST_NOTIFICATIONS` runtime grant,
# requested frontend-side via the plugin's permission API).  Part of the
# Tauri plugin coupled stack per AGENTS.md §"Coupled Dependency Updates"
# — move in lockstep with the rest of the tauri-plugin-* crates.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
ulid = "1.2.1"
uuid = { version = "1.23.2", features = ["v4"] }
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "net", "io-util", "io-std"] }
regex = "1"
aho-corasick = "1"
# NFC normalisation at FTS index time + query time. The
# crate is already a transitive dep (via the regex stack and a few
# other transitives in the lockfile); pinning it explicitly here is
# what makes our direct `use unicode_normalization::UnicodeNormalization`
# safe against a future transitive removal.
unicode-normalization = "0.1.25"
base64 = "0.22.1"
# #695 — "chrono" lets `ActivityEntry.timestamp: DateTime<Utc>` derive
# `specta::Type` for the `get_mcp_recent_activity` command bindings.
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
rustc-hash = "2.1.2"
similar = "3"
zstd = "0.13"
ciborium = "0.2"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Sync
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rcgen = "0.14"
mdns-sd = "0.20"
# Enumerate local interfaces so mDNS announces only on RFC 1918
# private IPv4 LAN interfaces (not on every routable interface, which
# leaks the device IP onto guest WiFi / VPN / cellular). Already in the
# build graph transitively via `mdns-sd`; promoted to a direct dep so
# `MdnsService::announce` can use it explicitly.
if-addrs = "0.15"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
sha2 = "0.11"
rand = "0.10"
x509-parser = "0.18.1"
tracing-appender = "0.2.4"
# Align `reqwest 0.13` to the repo's rustls-everywhere
# posture (same TLS stack as `tokio-tungstenite` / `tokio-rustls` / sqlx on
# rustls).  `rustls` in reqwest 0.13 pulls `rustls-platform-verifier` which
# uses the OS's native trust roots (matches the `rustls-tls-native-roots`
# feature in `tokio-tungstenite`).  `json` is used by `gcal_push::api`;
# `http2` keeps parity with reqwest's default bundle minus native-tls.
# `default-features = false` prevents the `native-tls` transitive crate
# from being pulled via `system-proxy` / `charset` at link time.
# Note: reqwest 0.13's `default-tls = ["rustls"]` (it changed from 0.12
# which defaulted to native-tls), so disabling defaults and re-selecting
# `rustls` yields a single rustls stack — binary size drops by the
# `native-tls-crate` slice.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "http2", "charset"] }
tauri-plugin-process = "2.3.1"

# `tauri-plugin-deep-link` enables OS-level URL routing for the
# `agaric://` scheme: `agaric://block/<ULID>` / `agaric://page/<ULID>` for
# external automation (terminal scripts, OS notifications, Spotlight),
# `agaric://settings/<tab>` for OS-level deep links into the Settings
# Panel (composes with `?settings=…` query param), and
# `agaric://oauth/callback` for the Custom-Tabs + PKCE + App-Link flow on
# Android (unblocker — Android sandboxes the loopback HTTP
# listener that desktop OAuth uses).  Cross-platform — required on
# desktop AND Android, so registration is NOT gated behind
# `#[cfg(desktop)]`.  Part of the Tauri plugin coupled stack per
# AGENTS.md §"Coupled Dependency Updates" — move in lockstep with the
# rest of the tauri-plugin-* crates.
tauri-plugin-deep-link = "2"
# `url` 2.x is already a transitive dep of every `tauri-plugin-*`
# crate that handles URLs (notably `tauri-plugin-deep-link`); declare it
# explicitly so `src-tauri/src/deeplink/mod.rs` can `use url::Url` to
# parse inbound `agaric://…` strings without depending on transitive
# resolution of an indirect dependency.
url = "2"
dirs = { version = "6.0.0", default-features = false }

# Spike: official Rust MCP SDK. Optional + feature-gated so
# the default build does not link `rmcp`. Pinned to v1.7 (post-1.0,
# Apache-2.0). Defaults (`base64`, `macros`, `server`) include the
# `transport-async-rw` server transport via the `server` feature; the
# `client` feature is added so the spike's end-to-end test can drive a
# real rmcp client over an in-memory `tokio::io::duplex` pair. See
# `src/mcp/rmcp_spike.md` for the spike verdict.
rmcp = { version = "1.7", features = ["client"] }

# Phase 1 — Loro CRDT runtime. Hard dep as of Phase 3 day-9
# (the `loro-shadow` feature gate retired); the engine is the only
# materializer path.  Caret-1 mirrors what the (now-archived) spike
# crate pinned (see git tag `pend-09/spike-archive` for
# `crates/loro-spike/Cargo.toml`); the spike's format-stability finding
# (kill criterion #4) is the basis for the 1.x pin.  Not part of any
# coupled dep stack per AGENTS.md §"Coupled Dependency Updates".
loro = "1.12"

# Phase 1 day-7 — deterministic, cross-Rust-version-stable u64
# hash for `peer_id_from_device_id`.  `std::hash::DefaultHasher`
# (SipHash-1-3) is documented as not stable across stdlib versions, and
# Loro's PeerID is load-bearing once peer ids start persisting across
# process lifetimes (Phase 2 `loro_doc_state` snapshots) and across
# devices that sync the same doc.  `xxh3_64` is deterministic
# (seed defaults to 0), versioned, and follows the official xxHash
# specification — pinning the algorithm here means a future Rustc
# upgrade will not silently re-credit op history to a different peer.
# Hard dep as of Phase 3 day-9 (no longer optional/feature-gated).
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
insta = { version = "1.47.0", features = ["yaml", "redactions"] }
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
# HTTP mocking for OAuth token endpoint tests.
wiremock = "0.6"

# Android-only dependencies (WiFi multicast lock via JNI).
# Gated on target_os = "android" so desktop builds do not pull in
# these transitive dependencies.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk-context = "0.1"

# Linux OS notifications are dispatched via notify-rust directly (see
# commands/notifier.rs): tauri-plugin-notification fires notify-rust's
# blocking show() on the tokio async runtime and discards the Result, which
# silently emits no D-Bus call on Linux. Same crate/version the plugin pulls.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

# Desktop-only Tauri plugins (#760).  Every registration is gated behind
# `#[cfg(desktop)]` / `#[cfg(not(mobile))]` in lib.rs (Tauri's `desktop`
# cfg = not(android | iOS), which is exactly this target expression), so
# the crates were dead weight + needless permission surface in the
# Android APK while they sat in the unconditional [dependencies] table.
# Their JS-facing permissions live in `capabilities/desktop.json`
# (platform-scoped to linux/macOS/windows) — keep the two in sync.
# All five are part of the Tauri plugin coupled stack per AGENTS.md
# §"Coupled Dependency Updates" — move in lockstep with the rest of the
# tauri-plugin-* crates.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Prevent two SQLite pools racing on the same DB if the user
# double-launches.  Android/iOS enforce single-instance via the OS task
# model.  MUST stay the first plugin registered in lib.rs.
tauri-plugin-single-instance = "2"
# Remember window size / position / monitor / maximized state
# across launches.  Android/iOS handle window state via the OS task
# lifecycle.
tauri-plugin-window-state = "2"
# Launch-on-login support. Settings → General → "Launch on
# login" toggle drives the plugin's `enable()` / `disable()` /
# `isEnabled()` IPC.  Plumbing per OS lives upstream (XDG autostart
# `.desktop` files on Linux, macOS `LaunchAgents`, Windows registry).
# Android/iOS handle "start at boot" via the OS task model (foreground
# service / background fetch entitlements).
tauri-plugin-autostart = "2"
# Desktop auto-update (minisign-signed bundles; see release.yml +
# tauri.conf.json).  Android updates flow through the Play Store /
# sideloaded APK, not Tauri's updater path.
tauri-plugin-updater = "2.10.0"
# Global hotkey for "quick capture" (drop a line into today's
# journal from anywhere).  Android / iOS have no global-shortcut
# concept (the `global-hotkey` crate doesn't compile there).
tauri-plugin-global-shortcut = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
# `panic = "abort"` shrinks the binary 5-10% (drops the
# unwind tables) and shaves a small amount of cold-start cost. Safe
# because Agaric does not rely on stack unwinding to recover from
# panics: Tauri IPC commands return `Result`, the daemon panic hook
# at lib.rs:447 just logs + lets the process terminate, and there
# are zero `std::panic::catch_unwind` call-sites in `src-tauri/src/`
# (verified during R24 landing — re-run `grep -r catch_unwind
# src-tauri/src/` before tightening this further). `lto = "fat"`
# was considered and rejected (2-5 min added to every release build
# per platform; not worth it on a 5-10% binary-size delta).
panic = "abort"

[lib]
name = "agaric_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "op_log_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "pagination_bench"
harness = false

[[bench]]
name = "soft_delete_bench"
harness = false

[[bench]]
name = "commands_bench"
harness = false

[[bench]]
name = "fts_bench"
harness = false

[[bench]]
name = "draft_bench"
harness = false

[[bench]]
name = "undo_redo"
harness = false

[[bench]]
name = "backlink_query_bench"
harness = false

[[bench]]
name = "move_reorder_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "import_bench"
harness = false

[[bench]]
name = "tag_query_bench"
harness = false

[[bench]]
name = "agenda_bench"
harness = false

[[bench]]
name = "agenda_expansion_bench"
harness = false

[[bench]]
name = "property_bench"
harness = false

[[bench]]
name = "compaction_bench"
harness = false

[[bench]]
name = "alias_bench"
harness = false

[[bench]]
name = "export_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "attachment_bench"
harness = false

[[bench]]
name = "property_def_bench"
harness = false

# #978 — coverage for two hot, user-facing read commands on the editor/block
# path that had no bench: `load_page_subtree` (every page open) and
# `get_blocks` (batch fetch for multi-select / backlink hydration).
[[bench]]
name = "page_load_bench"
harness = false

# Phase 2 §B.1 of `pending/scale-benchmarks-100k-2026-05-14.md` — history +
# undo/redo at scale ([1K, 10K, 100K] ops on a single page). The 50-op
# revert at 100K is the budget point that feeds the matching row in
# `interactive_slo.rs` (200 ms gate).
[[bench]]
name = "history_bench"
harness = false

# Phase 1 of `pending/scale-benchmarks-100k-2026-05-14.md` — latency-gate
# bench that re-runs every interactive Tauri command at the 100K-scale
# fixture and `panic!`s if any sample's mean elapsed exceeds the
# per-command budget (sourced from ARCHITECTURE.md §25). Intended to be
# run once in CI; the two §25 *Problem* commands (`list_page_links`,
# `list_projected_agenda`) are gated behind `SLO_INCLUDE_PROBLEM=1`
# until their fix plans land.
[[bench]]
name = "interactive_slo"
harness = false

# Phase 0 day-10 — paired SQL read benchmark mirroring the
# (now-archived) spike's `read_path_bench` (day-7); see git tag
# `pend-09/spike-archive` for the original source.  Throwaway in
# spirit; lives only until the spike's open question 8 is closed
# (see `docs/session-log/2026-sessions-401-800.md` Session 698 + `git tag pend-09/spike-archive`).
[[bench]]
name = "loro_vs_sql_reads"
harness = false

# #1231 Phase 2 — cold-start / vault-open at 100K blocks (time-to-first-render:
# pool open + page-list load + first-page render + initial materialization).
[[bench]]
name = "cold_start_bench"
harness = false

# #1231 Phase 3 — resource envelope at 100K blocks (DB-on-disk size + row
# counts; peak memory is an out-of-process gap, documented in the bench).
[[bench]]
name = "resource_envelope_bench"
harness = false

# Stdio ↔ MCP socket bridge binary shipped alongside the Tauri app.
# The main Tauri binary is `src/main.rs` (auto-detected); this extra bin is
# a small standalone forwarder that MCP clients spawn as a stdio subprocess.
[[bin]]
name = "agaric-mcp"
path = "src/bin/agaric-mcp.rs"

# #645 — the `audit_cross_space_refs` and `op_log_histogram` diagnostic
# bins were carved out of this crate into the `agaric-diagnostics`
# workspace member (`diagnostics/`). Moving them out of the app crate's
# `[[bin]]` scan was the session-738 NOTE's "proper resolution": a
# feature-gated bin can't be skipped because `tauri-bundler` scans every
# `[[bin]]` entry regardless of `required-features`, so the bins now live
# outside this manifest entirely. Run them with
# `cargo run -p agaric-diagnostics --bin <name>`.

# Phase 3 day-10 — `parity_report` bin deleted alongside the
# `merge_parity_log` table (migration `0057`).  The bin's reason for
# existing was the diffy-vs-Loro parity histogram during the Phase-2
# soak; with diffy gone the comparison surface no longer exists, the
# table got dropped, and the bin's queries would all be against a
# missing table.  Re-introduce from git history if a future sync
# audit ever needs an analogous tool.
